P2/Arrays/06/var/archive/xmlreports/0/0/0/000026
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="26" judge-id="2" status="CE" scoring="ACM" run-tests="0" contest-id="206" compile-error="yes" >
  <uuid>6f183b40-c753-4ec3-a169-32ab1283d01b</uuid>
  <compiler_output>000026.cpp: In function 'int main()':
000026.cpp:11:28: error: expected ')' before ';' token
  for (int i = 0; i &lt; n; ++i;)
                            ^
000026.cpp:11:2: warning: this 'for' clause does not guard... [-Wmisleading-indentation]
  for (int i = 0; i &lt; n; ++i;)
  ^~~
000026.cpp:11:29: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
  for (int i = 0; i &lt; n; ++i;)
                             ^
000026.cpp:11:29: error: expected primary-expression before ')' token
000026.cpp:14:28: error: expected ')' before ';' token
  for (int i = 0; i &lt; n; ++i;)
                            ^
000026.cpp:14:2: warning: this 'for' clause does not guard... [-Wmisleading-indentation]
  for (int i = 0; i &lt; n; ++i;)
  ^~~
000026.cpp:14:29: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
  for (int i = 0; i &lt; n; ++i;)
                             ^
000026.cpp:14:29: error: expected primary-expression before ')' token
000026.cpp:15:19: error: 'j' was not declared in this scope
   for (int j = n; j &gt; i; --j)
                   ^
000026.cpp:15:23: error: 'i' was not declared in this scope
   for (int j = n; j &gt; i; --j)
                       ^
000026.cpp:18:28: error: expected ')' before ';' token
  for (int i = 0; i &lt; n; ++i;)
                            ^
000026.cpp:18:2: warning: this 'for' clause does not guard... [-Wmisleading-indentation]
  for (int i = 0; i &lt; n; ++i;)
  ^~~
000026.cpp:18:29: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
  for (int i = 0; i &lt; n; ++i;)
                             ^
000026.cpp:18:29: error: expected primary-expression before ')' token
000026.cpp:8:6: warning: unused variable 'a' [-Wunused-variable]
  int a[100];
      ^
</compiler_output>
</testing-report>
